sapien_ingress/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: sapienafrica
  name: minimal-ingress
spec:
  ingressClassName: sapienafrica
  rules:
  - host: testingress.local  # Replace 'your-host-name.local' with your desired hostname
    http:
      paths:
      - backend:
          service:
            name: simple-web-app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
